<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Service Notifier</string>

    <string name="title_activity_main" translatable="false">Service Notifier</string>
    <string name="title_activity_about">About</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="notification_title">Phone Service Alert</string>
    <string name="notification_content_in_service">Your service has been restored</string>
    <string name="notification_content_out_service">Your phone is out of service</string>
    <string name="notification_content_emergency">You can only make emergency calls</string>
    <string name="notification_content_unknown">Unable to determine your service state</string>

    <string name="hint_tap_on_message">Tap to turn on notifications</string>
    <string name="hint_tap_off_message">Tap to turn off notifications</string>

    <string name="notification_state_on_message">Notifications enabled</string>
    <string name="notification_state_off_message">Notifications disabled</string>

    <!-- About Screen -->
    <string name="about_title_version">Version</string>
    <string name="about_title_support">Support</string>
    <string name="about_title_libraries">Third-Party Libraries</string>

    <string name="about_text_version" translatable="false">1.2</string>
    <string name="about_text_support" translatable="false">support@aftercoffeelabs.com</string>
    <string name="about_text_libraries" translatable="false">ButterKnife</string>

    <!-- Settings Screen -->
    <string name="settings_time_30sec">30 seconds</string>
    <string name="settings_time_1min">1 minute</string>
    <string name="settings_time_2min">2 minutes</string>
    <string name="settings_time_5min">5 minutes</string>
    <string name="settings_time_10min">10 minutes</string>

    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_title_time">Notification Time</string>
    <string name="settings_summary_time">Choose how soon you want to be notified of changes in your service.</string>
    <string name="settings_title_vibrate">Vibrate</string>

    <!-- Shared Preference Keys -->
    <string name="sharedPrefKey_persistence_time" translatable="false">persistence_time</string>
    <string name="sharedPrefKey_vibrate" translatable="false">vibrate</string>

</resources>
