<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_category_notifications">

        <ListPreference android:title="@string/settings_title_time"
                android:summary="@string/settings_summary_time"
                android:key="@string/sharedPrefKey_persistence_time"
                android:defaultValue="60"
                android:entries="@array/listArray"
                android:entryValues="@array/listValues"
                android:persistent="true"/>

        <SwitchPreference android:title="@string/settings_title_vibrate"
            android:defaultValue="true"
            android:key="@string/sharedPrefKey_vibrate" />

    </PreferenceCategory>

</PreferenceScreen>